--- a/presentation_report/thesis/msc_report.tex
+++ b/presentation_report/thesis/msc_report.tex
@@ -111,6 +111,17 @@ advantages and limitation of this framework and provide an outlook.
 \bibliographystyle{mywiley} 
 \bibliography{biblio}
 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+% appendix
+
+\input{chapter06}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+
 \cleardoublepage
 
 \end{document}
