--- a/presentation_report/thesis/chapter02.tex
+++ b/presentation_report/thesis/chapter02.tex
@@ -293,7 +293,7 @@ Problems with ITE: (in an RCT setting)
 
 - maybe also make propensity score estimation on IST stroke trial to check if possibly confounded.
 
-
+- also talk about propensity score Rubin(2007) to basically estimate an RCT...and overcome the problem of confounding. but this might work for ATE but not really for ITE, direct modelling of the outcome is necessary % https://pmc.ncbi.nlm.nih.gov/articles/PMC5920646/
 
 
 \textbf{Models for ITE Estimation}
